<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/fragment_searchcity_rl_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="10%"
        android:background="@color/highlighted_text_material_light">

        <ImageView
            android:id="@+id/fragment_searchcity_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"
            android:paddingTop="25dp"
            android:paddingLeft="5dp"
            android:contentDescription="@string/description_backtocitymanager"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_addCity"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingTop="25dp"
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            />

    </RelativeLayout>

    <EditText
        android:id="@+id/fragment_searchcity_et_search_city"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="95%"
        app:layout_heightPercent="6%"
        android:paddingLeft="10dp"
        android:hint="@string/hint_search_city"
        android:layout_below="@+id/fragment_searchcity_rl_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_edittext"
        android:singleLine="true"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_searchcity_rv_citylist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/fragment_searchcity_et_search_city"/>

</android.support.percent.PercentRelativeLayout>